UI-select [FIX] Fixes bleeding props from fontawesome

--- a/scss/core/elements/_input.ui-select.scss
+++ b/scss/core/elements/_input.ui-select.scss
@@ -59,7 +59,7 @@
 
 			.ui-select-match-text {
 				white-space: pre;
-				text-overflow: ellipsis;
+				float: none !important;
 			}
 
 			&:not(.open) .ui-select-toggle,
